# kdev-dlang

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ddebug.cpp  ddebug.h  dhighlighting.cpp  dhighlighting.h  dlangparsejob.cpp  dlangparsejob.h  gohighlighting.cpp  golangparsejob.cpp  kdev-d.desktop.in  kdev-dlang.kdev4  kdevdlang.json  kdevdlangplugin.cpp  kdevdlangplugin.h  kdevdplugin.cpp  kdevdplugin.h  kdevgoplugin.cpp  kdevgoplugin.json
.kdev4/: kdev-go.kdev4
app_templates/: CMakeLists.txt
app_templates/simple_dlang_app/: %{APPNAMELC}.d  simple_dlang_app.kdevtemplate
codecompletion/: CMakeLists.txt  completiondebug.cpp  completiondebug.h  context.cpp  context.h  dcompletionexport.h  model.cpp  model.h  worker.cpp  worker.h
codecompletion/items/: completionitem.cpp  completionitem.h  functionitem.cpp  functionitem.h  importcompletionitem.cpp  importcompletionitem.h
codecompletion/tests/: testcompletion.cpp  testcompletion.h
dparser/: build.sh  dparser.h  dub.json  importedstuff.d
dparser/libdparse/: dub.json
dparser/libdparse/src/std/d/: ast.d  parser.d
dparser/src/: dparse.d
duchain/: CMakeLists.txt  dduchainexport.h  dducontext.cpp  dducontext.h  duchaindebug.cpp  duchaindebug.h  goducontext.cpp  helper.cpp  helper.h
duchain/builders/: contextbuilder.cpp  contextbuilder.h  declarationbuilder.cpp  declarationbuilder.h  typebuilder.cpp  typebuilder.h  usebuilder.cpp  usebuilder.h
duchain/declarations/: functiondeclaration.cpp  functiondeclaration.h
duchain/navigation/: declarationnavigationcontext.cpp  declarationnavigationcontext.h  navigationwidget.cpp  navigationwidget.h
duchain/tests/: testduchain.cpp  testduchain.h
duchain/types/: gochantype.cpp  gochantype.h  gofunctiontype.cpp  gofunctiontype.h  gointegraltype.cpp  gointegraltype.h  gomaptype.cpp  gomaptype.h  gostructuretype.cpp  gostructuretype.h
parser/: CMakeLists.txt  build.sh  cppwrappergenerator.d  dparser.h  parsesession.cpp  parsesession.h
parser/libdparse/: dub.json  dub.json.orig
parser/libdparse/src/dparse/: ast.d  parser.d  parser.d.orig
parser/src/: dparse.d
tests/: importedstuff_cpp.cpp  simpletest.d  testif.d  verysimpletest.cpp  verysimpletest.d  veryverysimpletest.d
